[project]
name = "brazil-asean-trade-radar"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Sebben",email = "felipesebben@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb (>=1.4.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
